# VoxelC

./: .gitignore  CMakeLists.txt  Compile.bat  ConvertShaders.py  Doxyfile  Main.c  Notes.txt  README.md  UnitTester.bat  UnitTester.c  VoxelC.code-workspace  compileShaders.bat  compile_shaders.bat  convert_shaders.py  shaders.bat  tasks.json
Debug/: Logger.c
config/: VoxelC.cfg.json  VoxelC.cfg.json.old
res/models/: base_16x16_block.glb  complex_test.glb  fancy_model_test.glb  hello_world.glb  test.glb
res/shaders/: frag.spv  shader.frag  shader.frag.h  shader.vert  shader.vert.h  shader_fill.frag.h  shader_model_fill.frag.h  shader_voxel.vert  shader_voxel.vert.h  shader_voxel_fill.frag  shader_voxel_fill.frag.h  shader_wireframe.frag  shader_wireframe.frag.h  vert.spv
src/: Application.h  Chunk.h  Context.h  Definitions.h  Headers.h  LinearAlgebra.h  Logger.c  Logger.h  Logs.h  Main.c  Physics.h  Renderer.h  Shaders.h  Times.h  Toolkit.h  UnitTester.c  Utils.h  Window.h  app.c  app.h  main.h
src/api/chunk/: chunkAPI.h  chunkSourceVTable_t.h  chunkSource_t.h  chunkState_e.h  chunk_t.h
src/c_math/: c_math.h  matrix.h  quaternion.h  units.h  vector.h
src/character/: character.c  character.h  characterController.c  characterController.h  characterType_t.h  character_t.h
src/chunk/: chunk.c  chunk.h  chunkManagerNew.c  chunkManagerNew.h  chunkManager_t.h  chunkSource_local.c  chunkSource_local.h  chunkSource_network.c  chunkSource_network.h
src/cmath/: cmath.c  cmath.h  weightedMap_t.h  weightedMaps.c  weightedMaps.h
src/collection/: dynamicStack_t.h  flags64_t.h  linkedList_t.h
src/compat/: intellisense_shims.h
src/core/: app_time.c  app_time.h  config.c  config.h  core.h  cpuManager.c  cpuManager.h  crash_handler.c  crash_handler.h  fileIO.c  fileIO.h  glfw_instance.c  glfw_instance.h  logs.c  logs.h  random.c  random.h  randomNoise.c  randomNoise.h  state.h  vkWrappers.h  vk_instance.c  vk_instance.h
src/core/state/: context_t.h  renderer_t.h  state.h  window_t.h
src/core/types/: atlasFace_t.h  atlasRegion_t.h  context_t.h  renderer_t.h  scene_t.h  state_t.h  swapchain_t.h  time_t.h  window_t.h
src/entity/: entityCollection_t.h  entityManager.c  entityManager.h  entity_t.h
src/events/: eventBus.c  eventBus.h  eventTypes.h
src/events/context/: CtxChunk_t.h  CtxDescriptor_t.h  CtxGUI_t.h  CtxInputMapped_t.h  CtxInputRaw_t.h
src/gui/: guiController.c  guiController.h  guiState_t.h  gui_t.h  mouse.c  mouse.h  mouse_t.h  swapchain.c  swapchain.h  window.c  window.h
src/input/: input.c  input.h
src/input/types/: defaulyKeyMapping_t.h  inputActionMapping_t.h  inputActionQuery_t.h  inputKey_t.h  input_t.h
src/physics/: physics.c  physics.h
src/rendering/: atlas_texture.c  atlas_texture.h  command_pool.h  depth.c  depth.h  graphics_pipeline.c  graphics_pipeline.h  image.c  image.h  model_3d.c  model_3d.h  renderGC.c  renderGC.h  render_pass.c  render_pass.h  rendering.c  rendering.h  shaders.h  syncObjects.c  syncObjects.h  texture.c  texture.h  uvs.h  voxel.h
src/rendering/buffers/: buffers.c  buffers.h  command_buffer.c  command_buffer.h  frame_buffer.c  frame_buffer.h  index_buffer.c  index_buffer.h  intex_buffer.c  uniform_buffer.c  uniform_buffer.h  vertex_buffer.c  vertex_buffer.h
src/rendering/camera/: cameraController.c  cameraController.h  camera_t.h
src/rendering/chunk/: chunkRenderer.c  chunkRenderer.h  chunkRendering.c  chunkRendering.h
src/rendering/pools/: command_pool.c  command_pool.h  descriptor_pool.c  descriptor_pool.h
src/rendering/types/: anisotropicFilteringOptions_t.h  chunkRemeshCtx_t.h  chunkRenderer_t.h  faceTexture_t.h  graphicsPipeline_t.h  renderChunk_t.h  renderModel_t.h  shaderVertexModel_t.h  shaderVertexVoxel_t.h  shaderVertex_t.h  swapchainBuffering_t.h  textureRotation_t.h  uniformBufferObject_t.h
src/scene/: SceneModelInstance_t.h  scene.c  scene.h
src/testing/: event_tests.c  event_tests.h  math_tests.c  math_tests.h  unit_tests.c  unit_tests.h
src/threading/: threading.c  threading.h
src/world/: chunk.h  chunkGenerator.c  chunkGenerator.h  chunkManager.c  chunkManager.h  chunkSolidityGrid.h  world.c  world.h  worldConfig_t.h  worldCore.c  worldCore.h  worldState_t.h  worldType_e.h  world_t.h
src/world/voxel/: blockFlags.h  block_t.h  cubeFace_t.h
tests/: main.c  unit_tests.c  unit_tests.h
tests/modules/: chunk_tests.c  chunk_tests.h  event_tests.c  event_tests.h  math_tests.c  random_tests.c  random_tests.h
tests/modules/chunk/: chunkAPI_tests.c  chunkAPI_tests.h  chunkState_tests.c  chunkState_tests.h  chunk_tests.c
tests/modules/collections/: dynamicStack_tests.c  dynamicStack_tests.h  flags64_tests.c  flags64_tests.h  linkedList_tests.c  linkedList_tests.h
tests/modules/events/: event_tests.c
tests/modules/math/: math_tests.c  math_tests.h
tests/modules/random/: random_tests.c
tests/modules/voxel/: voxel_tests.c  voxel_tests.h
